--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,1 +1,2 @@
-<map longitude="{{long}}" latitude="{{lat}}" style="width:100%; height:100%" />
+<map longitude="{{long}}" latitude="{{lat}}" controls="{{controls}}"
+ style="width:100%; height:100%" />
