--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,2 +1,8 @@
-<map longitude="{{long}}" latitude="{{lat}}" controls="{{controls}}"
+<map id="myMap"
+ longitude="{{long}}"
+ latitude="{{lat}}"
+ controls="{{controls}}"
+ show-location="true"
+ scale="17"
+ bindcontroltap="controltap"
  style="width:100%; height:100%" />
