--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -5,4 +5,7 @@
  show-location="true"
  scale="17"
  bindcontroltap="controltap"
- style="width:100%; height:100%" />
+ style="width:100%; height:100%"
+ markers="{{markers}}"
+ bindregionchange='regionchange'
+ ></map>
